Fixed issue of spaces stretching and shrinking when content is added

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     margin: 0;
 }
 
+:root {
+    --board-height: 60vh;
+    --board-width: 60vh;
+}
 nav {
     display: flex;
     justify-content: center;
@@ -18,14 +22,13 @@ nav {
     width:100%;
     height:100%;
     background-color:rgba(0,0,0,.5);
-    display: none;
 
 }
 
 .board {
     display: grid;
-    height: 60vh;
-    width: 60vh;
+    height: var(--board-height);
+    width: var(--board-width);
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-columns: repeat(3, minmax(0, 1fr));
     margin: 2rem;
@@ -36,6 +39,9 @@ nav {
     background-color: #d1d5db;
     border: 2px solid black;
     font-size: 50px;
+    height: calc(var(--board-height)/3);
+    width: calc(var(--board-width)/3);
+
 
 }
 
@@ -59,19 +65,21 @@ main {
     position: fixed;
     display: flex;
     flex-direction: column;
-    height: 50vh;
-    width: 40vh;
+
+    width: clamp(10vw, 20vw, 40vw);
     background-color: #e4e4e7;
     gap: 1rem;
     padding: 2rem;
     border-radius: 10px;
     border: 1px solid black;
+    z-index: 1000;
+    top: 20vh;
 }
 
 .game-start button {
-    padding: 2rem;
+    padding: 1.5rem;
     font-size: larger;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .game-start input {
@@ -80,4 +88,8 @@ main {
 
 .game-start h2 {
     align-self: center;
+}
+
+.starting-symbols {
+    display: none;
 }
